Fix Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html{
@@ -53,7 +54,7 @@ nav a {
   float: left;
   display: block;
   margin-top: 130px;
-  margin-left: 50px;
+  padding-left: 50px;
 }
 
 .text {
